# osdl

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  simple.cpp
include/: OSDL.h
src/: Geometry.cpp  Geometry.h
src/animation/: Animation.cpp  Animation.h  AnimationBuilder.h  Slide.cpp  Slide.h  Spinner.cpp  Spinner.h  Zoom.cpp  Zoom.h
src/raster/: Box.cpp  Box.h  Circle.cpp  Circle.h  Image.cpp  Image.h  Raster.cpp  Raster.h  Rectangle.cpp  Rectangle.h  Roundbox.cpp  Roundbox.h  Text.cpp  Text.h  TextBlock.cpp  TextBlock.h
src/widget/: Widget.cpp  Widget.h
src/window/: MainWindow.cpp  MainWindow.h  Renderer.cpp  Renderer.h
